fix: scrollbar color

--- a/src/components/ScrollView/ScrollView.scss
+++ b/src/components/ScrollView/ScrollView.scss
@@ -12,7 +12,7 @@
 .thumb-vertical,
 .thumb-horizontal {
   border-radius: 32px;
-  background-color: red;
+  background-color: #afafaf;
 }
 
 .scrollbar-x-hide {
